sort out imports and installations

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal = 1
 
 [metadata]
-name = martiniglass
+name = cubic-phase-fitter
 author = Christopher Brasnett
 author_email = c.s.brasnett@rug.nl
 description_file = README.md
@@ -22,5 +22,6 @@ install-requires =  # ?? requires-dist?
     numpy
     tqdm
     scipy
-    skimage
+    scikit-image
+    lmfit
 zip-safe = False
